# ftdi-embedded-hal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: ci.yml
examples/: at24c04.rs  blink.rs  blink_sbb.rs  bme280.rs  i2cdetect.rs  input.rs  lm75.rs  spi-eh1-loopback.rs  spi-flash.rs  ws2812.rs
src/: delay.rs  error.rs  fthalsbb.rs  gpio.rs  gpiosbb.rs  i2c.rs  lib.rs  spi.rs
tests/: issue_18.rs  version-numbers.rs
