[package]
name = "ftdi-embedded-hal"
version = "0.10.0"
authors = ["Alex M. <alexmgit@protonmail.com>"]
description = "embedded-hal implementation for FTDI USB devices."
keywords = ["ftdi", "usb", "io", "hal"]
categories = ["embedded"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ftdi-rs/ftdi-embedded-hal/"
documentation = "https://docs.rs/ftdi-embedded-hal"
readme = "README.md"

[features]
libftd2xx-static = ["libftd2xx/static"]
default = []

[dependencies]
nb = "^1"
embedded-hal = "~0.2.4"
ftdi-mpsse = "^0.1"
libftd2xx = { version = "0.32.0", optional = true }
ftdi = { version = "0.1.3", optional = true }

[dev-dependencies]
version-sync = "~0.9.2"
spi-memory = "0.2.0"
eeprom24x = "0.4.0"
lm75 = "0.2.0"

[badges]
maintenance = { status = "experimental" }
