[package]
name = "ftdi-embedded-hal"
version = "0.12.0"
authors = ["Alex Martens <alex@thinglab.org>"]
description = "embedded-hal implementation for FTDI USB devices."
keywords = ["ftdi", "usb", "io", "hal"]
categories = ["embedded"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ftdi-rs/ftdi-embedded-hal/"
documentation = "https://docs.rs/ftdi-embedded-hal"
readme = "README.md"

[features]
libftd2xx-static = ["libftd2xx/static"]
default = []

[dependencies]
eh0 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
eh1 = { package = "embedded-hal", version = "1.0.0-alpha.8" }
ftdi = { version = "0.1.3", optional = true }
ftdi-mpsse = "0.1"
libftd2xx = { version = "0.32", optional = true }
nb = "1"

[dev-dependencies]
cfg-if = "1"
eeprom24x = "0.5.0"
lm75 = "0.2.0"
spi-memory = "0.2.0"
version-sync = "0.9.2"

[badges]
maintenance = { status = "experimental" }
